@@ -1,3 +1,9 @@
+2003-09-03 Aleksey Sanin <aleksey@aleksey.com>
+ 
+ 	* parser/GAPI/Metadata.pm: enable enums processing using
+ 	<class/> element syntax
+ 
+
 2003-09-02  Martin Willemoes Hansen  <mwh@sysrq.dk>
 
 	* gda/Makefile.in: Fixed bad nowarn options
